CT.Prompt: fixed this._.submit references. centeredpopup css class gets overflow-y auto.

--- a/cantools/css/ct.css
+++ b/cantools/css/ct.css
@@ -65,6 +65,7 @@
     margin-top: -150px;
     margin-left: -250px;
     text-align: center;
+    overflow-y: auto;
 }
 .choice_cell {
     border: 1px solid black;
